# market-risk-dashboard

./: .env.example  .gitignore  Makefile  README.md  THIRD_PARTY_NOTICES.md  index.html  pyproject.toml  requirements.txt  setup.cfg  snow-lab.html
.github/workflows/: update-market-risk.yml
config/: news_digest_keywords.json
configs/: base.yaml  data_sources.yaml
data/: data-quality.json  els-index-risk.json  hmm-regime.json  market-history-cache.json  market-risk-backtest.json  market-risk-snapshot.json  market-risk-timeseries.json  market-stress-episodes.json  ml-risk-signal.json  naver-marketindex-history.json  pipeline-status.json  risk-dashboard.json
reports/research/: transformer_ensemble_lab_v2.md
scripts/: analyze_stress_episodes.py  audit_data_completeness.py  backtest_market_risk.py  export_els_index_risk.py  export_hmm_regime.py  export_ml_risk_signal.py  install_local_market_update_launchd.sh  install_news_digest_launchd.sh  run_local_market_update.sh  send_risk_news_digest.py  update_market_risk.py  write_pipeline_status.py
src/: app.js  forest-lab.js  ocean-lab.js  risk-model.js  snow-lab.css  snow-lab.js  styles.css
tests/: smoke_test.py  test_cli_smoke.py  test_data_completeness.py  test_data_schema.py  test_els_issuance_hedge.py  test_ensemble_lab.py  test_feature_alignment.py  test_hmm_regime_contract.py  test_market_data_fetcher.py  test_market_risk_indicators.py  test_pipeline_status.py  test_research_harness.py  test_scoring.py  test_targets.py  test_transformer_lab_options.py  test_update_market_risk_fallback.py  test_walk_forward.py
(+15 files in other folders)
