[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kospi-risk-regime-lab"
version = "0.1.0"
description = "Leakage-safe Korean equity index risk forecasting research pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "PyYAML>=6.0",
  "joblib>=1.3",
  "pyarrow>=14.0",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
lightgbm = ["lightgbm>=4.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-q"
