[metadata]
name = kospi-risk-regime-lab
version = 0.1.0
description = Leakage-safe Korean equity index risk forecasting research pipeline

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.24
    pandas>=2.0
    scikit-learn>=1.3
    PyYAML>=6.0
    joblib>=1.3
    pyarrow>=14.0
    matplotlib>=3.7

[options.packages.find]
where = src
